@@ -43,6 +43,8 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
   * Correct short description of iso-scan. Closes: #501175.
   * PowerPC currently doesn't have hd-media images, so is not "bootable-usb".
   * There are no floppy images for i386 for Lenny; disable relevant sections.
+  * Major rewrite of section about preparing a USB stick for booting the
+    installer. Closes: #500206, #500283.
 
  -- Frans Pop <fjp@debian.org>  Mon, 06 Oct 2008 00:26:26 +0200
 
